aau/sf_autobackup/objects/mob_Student__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Settings for Mobile Student App.</description>
    <fields>
        <fullName>Base_Url__c</fullName>
        <defaultValue>&quot;https://login.salesforce.com&quot;</defaultValue>
        <description>Base Url to be used in REST calls, etc.</description>
        <inlineHelpText>Base Url to be used in REST calls, etc.</inlineHelpText>
        <label>Base Url</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Refresh_Rate__c</fullName>
        <description>Refresh Rate for Busses in milliseconds</description>
        <label>Bus Refresh Rate</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Key__c</fullName>
        <defaultValue>&quot;3MVG9Oe7T3Ol0ea4rCgfMtZo3n40wB4t890nElRZIKn5z2cjSuFdf13Yrw6bgcwA5vlotolfrrrHGqaimsfyM&quot;</defaultValue>
        <description>Key used for &quot;Remote Access&quot; when doing REST calls</description>
        <inlineHelpText>Key used for &quot;Remote Access&quot; when doing REST calls</inlineHelpText>
        <label>Client Key</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rest_Url__c</fullName>
        <defaultValue>&quot;https://aau--dev6.cs12.my.salesforce.com&quot;</defaultValue>
        <description>This is the Base Url for Rest Calls into Salesforce.  We are passing this to Phonegap.GetRestData</description>
        <inlineHelpText>This is the Base Url for Rest Calls into Salesforce.</inlineHelpText>
        <label>Rest Url</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teletrac_Account__c</fullName>
        <label>Teletrac Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teletrac_Password__c</fullName>
        <label>Teletrac Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teletrac_Username__c</fullName>
        <description>Used to connect to Teletrac REST Service to get Bus Location Info</description>
        <inlineHelpText>Used to connect to Teletrac REST Service to get Bus Location Info</inlineHelpText>
        <label>Teletrac Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>mob_Student</label>
</CustomObject>